--- a/gb/20/12/27/n12647347.md
+++ b/gb/20/12/27/n12647347.md
@@ -12,10 +12,6 @@
 <p>本次活动有10位男性照服员参加评选，创下历年新高，也表示照顾服务员已是男女平权的工作。在玛利亚服务20年的黄小姐表示很庆幸自己是一个照服员，因为工作中充满了情感，能参与别人的生命故事，也丰富了自己的生命。年仅23岁仍充满稚气的周先生表示，他将努力学习，秉持“甘心给、用心爱”的理念，服务可爱的长辈们。</p>
 <p>县长林姿妙除了感谢照顾机构及照顾服务员的付出，更感谢国际扶轮社对宜兰县长照工作之支持，同时也希望透过本次表扬活动，使民众对照顾服务员工作有更多尊重及理解；县长表示银发照护是县府责无旁贷的责任，完善照护体系还需仰赖民间力量共同投入一起努力，也期待有更多青年人投入长照服务，打造青银共荣之希望城市，共同拼出宜兰好生活。</p>
 <p>责任编辑：李薇</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/31/n11490247.md#1">公私部门协力办活动 提醒长辈作失智筛检</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/25/n11545313.md#1">国际公卫学者 盛赞彰县社区健康服务模式</a></li>
@@ -23,41 +19,35 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/23/n11606993.md#1">心理健康月宣导 多关心亲友减少忧郁症</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/26/n12432103.md#1">重阳敬老 屏东县府表扬长青、敬老楷模</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/23/n12496652.md#1">台北大风堂扶轮社举办重阳传爱 友善邻里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14050920.md#1">台东地区稻米达人赛 种稻7年农友夺冠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14050862.md#1">5月搁浅玳瑁伤后复原 潮境保育区成功野放</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14050848.md#1">蔡适应向中央争取预算 改善校园通行步道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14050791.md#1">街舞冠军再添一笔 基隆规划南站为练习空间</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106071.md#1">发展多元文化 基隆11/7举办国际移民论坛</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106079.md#1">倾听教练建言 谢国梁：明年复办游泳体育班</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106119.md#1">重温戏曲拼场年代 北管音乐文化再延续</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106116.md#1">全台唯一“偏乡血液透析中心”年底前完工启用</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/25/n11070799.md#1" target="_blank">林辉：因如此荒诞理由 他们成为了“右派”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047678.md#1">【未解之谜】证明轮回存在的基督徒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048452.md#1">一叶知秋立秋到  秋季养生三心法和好食材</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040667.md#1">地狱到底为什么存在？无间地狱哪里是尽头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040847.md#1">【杨延昭传奇】棋盘石斗棋 三箭退辽兵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048753.md#1">一位天使和两幅《最后的晚餐》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050350.md#1">【环球直击】民众补笔 伦敦涂鸦墙成反共民主墙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050392.md#1">【晚间新闻】洪灾引爆抗议 党官承认央视造假</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14050949.md#1">【十字路口】半世纪最大洪灾 曝中共七大人祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049851.md#1">袁红冰：习要在台海动刀兵 但遇根本难题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050390.md#1">王友群：习近平的用人与政局的凶险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050018.md#1">因洪灾失去家园 河北两地民众讨说法被镇压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049091.md#1">陈妍希饰演邓丽君 新剧大陆开播日遭闪电撤档</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049100.md#1">格斗选手穷到睡健身房 巨石强森送他一栋房</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14049119.md#1">送4岁儿回冯绍峰家 赵丽颖一举动破复合传闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050372.md#1">当妈4年首晒母子合照 赵丽颖被儿子搂着自拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049670.md#1">香港知名音乐人陈匡荣病逝 终年52岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049379.md#1">美航机长对乘客发号施令 哈佛学者称赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049197.md#1">高温酷暑 电动汽车续航力将大打折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049804.md#1">心理学家谈抗压：提高情绪韧性 勤练9句话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048261.md#1">椰子糖可治糖尿病？一文看懂该怎样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049278.md#1">最新统计：中国人买美国房产 爆炸式增长</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105107.md#1">【菁英论坛】习拜会 传中共要求“拜登微笑”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104629.md#1">【热点互动】柯文哲选战策略？郭台铭难顶压力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104871.md#1">【全球新闻】李克强去世 中共急于发丧太反常</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/27/n12647347.htm">扶轮扶老宜兰乐养老 表扬绩优照服员及长照机构</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/20/12/27/n12647347.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
