--- a/gb/23/1/9/n13902766.md
+++ b/gb/23/1/9/n13902766.md
@@ -19,10 +19,6 @@
 <p>蔡易余等来宾致词，除了肯定嘉义县蔡鼎三服务协会往年对地方需要帮助的家庭给予协助与服务之外，更一致赞扬和感谢台湾卧龙爱心会暨郑清木村长联合服务处的成立与帮忙，让公部门无法即时伸出援手时，可以即时解决弱势家庭，以及需要急难救助的民众渡过难关，真是功德无量。◇</p>
 <figure id="attachment_13902767" aria-describedby="caption-attachment-13902767" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13902767-594702.jpg"><img class="size-large wp-image-13902767" src="https://i.epochtimes.com/assets/uploads/2023/01/id13902767-594702-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13902767" class="wp-caption-text">台湾卧龙爱心会暨洲仔村长郑清木联合服务处，于8日举行成立大会暨揭牌仪式，由台湾卧龙爱心会理事长曾婉贞（左6）、前理事长陈俊益（左5）和村长郑清木（左3），以及立法委员蔡易余（右6）、东石乡长林俊雄（左8）、朴子市长吴品叡（左7）、布袋镇长蔡玮杰（右5）等贵宾一同进行揭牌仪式。（卧龙爱心会暨郑清木村长服务处提供）</figcaption></figure>
 <p>责任编辑：黄善</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/16/10/9/n8381395.md#1">台湾卧龙爱心会 冬令慈善活动让爱绵延</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/29/n9781849.md#1">台湾卧龙爱心会  举办106年爱心慈善活动</a></li>
@@ -32,39 +28,33 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/22/n13871063.md#1">全美第一所大学华语文中心举行揭牌仪式</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900673.md#1">让爱传出去 警民助弱势家庭申请急难救助</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13901957.md#1">提供弱势家庭更多元温暖与关怀 中坜公所送暖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077743.md#1">急性后期患者福音  朴医前瞻复健病房揭牌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077665.md#1">黄敏惠邀请大家中秋来嘉赏“芭比粉”月亮</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106166.md#1">侯芳昀获大溪国际木家具工艺设计竞赛铜奖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106174.md#1">云林县议长补选 无党籍黄凯高票当选</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955771.md#1" target="_blank">林辉：携美资料返国 中国石油之父最终绝望</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062287.md#1">【古道人生】两人为躲债藏山洞 结果都把债还了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074103.md#1">【未解之谜】“雷暴哮喘” 《推背图》中的秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073883.md#1">医院放弃治疗 植物人神奇被唤醒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077109.md#1">【菁英论坛】“收租院”血迹斑斑 刘文彩真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077210.md#1">【秦鹏观察】融创在美申请破产保护 酿更大危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076733.md#1">【全球新闻】传李尚福供出17人 中共评估秦李案影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075376.md#1">【翻墙必看】分析：秦刚还活着吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076086.md#1">专家：习近平在评估秦刚李尚福案的影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14075767.md#1">王毅过关内幕 习近平实现野心的两手策略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075690.md#1">李易峰因嫖娼遭封杀一年 疑似复出直播遭举报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075692.md#1">中共抗日剧饰日军官 马卫军罹喉癌于东京病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076481.md#1">与日武打女星武田梨奈聚会 洪金宝暴瘦照曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075660.md#1">袁冰妍被点名偷漏税 微博遭禁 电视台急切割</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076516.md#1">遭史密斯掌掴致心理创伤？洛克被曝曾求医</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075482.md#1">日本80岁老翁登顶2230次 富士山为何吸引人？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073756.md#1">研究：高脂肪早餐可提升晚期肺癌药疗效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076055.md#1">医生提出警告 不要和小狗同床而睡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065005.md#1">拯救视力勿乱点药水 中医教你1分钟养眼 效果最佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14071834.md#1">你了解自己吗？千万别活成他人眼中的人偶</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105107.md#1">【菁英论坛】习拜会 传中共要求“拜登微笑”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104629.md#1">【热点互动】柯文哲选战策略？郭台铭难顶压力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104871.md#1">【全球新闻】李克强去世 中共急于发丧太反常</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/9/n13902766.htm">卧龙爱心会暨洲仔村长郑清木服务处揭牌</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
